# yurtle-kanban

./: .gitignore  AGENT-QUICK-REF.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  kanban-auto-close.yml  kanban-board.yml
.kanban/: _ID_ALLOCATIONS.json
docs/: GITHUB_PAGES.md  THEMES.md  hdd-methodology.md  query.md
examples/.kanban/: config.yaml
examples/.kanban/workflows/: bug.yurtle.md  feature.yurtle.md
skills/done/: SKILL.md
skills/hdd/experiment/: SKILL.md
skills/hdd/hdd/: SKILL.md
skills/hdd/hypothesis/: SKILL.md
skills/hdd/idea/: SKILL.md
skills/hdd/literature/: SKILL.md
skills/nautical/expedition/: SKILL.md
skills/software/blocked/: SKILL.md
skills/software/done/: SKILL.md
skills/software/feature/: SKILL.md
skills/software/handoff/: SKILL.md
skills/software/review/: SKILL.md
skills/software/work/: SKILL.md
src/yurtle_kanban/: __init__.py  board.py  campaign_commands.py  cli.py  config.py  epic_commands.py  export.py  gates.py  hdd_commands.py  hooks.py  indexer.py  models.py  pr_id_extractor.py  query.py  research_interlinks.py  service.py  template_engine.py  turtle_builder.py  workflow.py
src/yurtle_kanban/mcp/: __init__.py  server.py
templates/hdd/: experiment.md  hypothesis.md  idea.md  literature.md  measure.md  paper.md
templates/nautical/: chore.md  directive.md  expedition.md  hazard.md  signal.md  voyage.md
templates/software/: bug.md  chore.md  epic.md  feature.md  idea.md  task.md
templates/spec/: adr.md  issue.md  rfc.md  spec.md  spike.md  task.md
tests/: __init__.py  test_campaign_commands.py  test_closed_by.py  test_epic_commands.py  test_export.py  test_gates.py  test_hdd_commands.py  test_hooks.py  test_init.py  test_models.py  test_multiboard.py  test_per_type_wip.py  test_pr_id_extractor.py  test_priority_filter.py  test_priority_rank.py  test_query.py  test_research_interlinks.py  test_roadmap_history.py  test_service.py  test_turtle_builder.py  test_workflow.py
themes/: hdd.yaml  nautical.yaml  software.yaml  spec.yaml
work/: EXP-002-Auto-close-kanban-items-on-PR-merge.md
